# AutomatedSoftwareDeveloper

./: .gitignore  AGENTS.md  BUGFIX_PLAYBOOK.md  CHANGELOG.md  OPERATIONS.md  PIPELINE.md  PRIVACY.md  PROMPT_PLAYBOOK.md  PROMPT_TEMPLATE_CHANGES.md  README.md  SECURITY.md  SMOKE_TEST_REPORT.md  bandit.yaml  deep-research-report.md  pyproject.toml
.github/: labeler.yml
automated_software_developer/: __init__.py  __main__.py  cli.py  logging_utils.py  ui_cli.py
ci/: run_ci.py  run_ci.sh
scripts/: bandit_json_to_sarif.py  check_coverage_diff.py  check_pr_governance.py  detect_import_cycles.py  embed_journal.py  select_test_shard.py  start_ui.bat  start_ui.ps1  validate_workflow_pins.py
tests/: test_agile_backlog.py  test_agile_ceremonies.py  test_agile_dod.py  test_agile_full_sprint.py  test_agile_github_sync.py  test_agile_metrics.py  test_agile_sprint_engine.py  test_architecture.py  test_ci_failure_scripts.py  test_ci_mirror.py  test_ci_unified_action_runner.py  test_cli_controls.py  test_cli_preauth.py  test_cli_smoke.py  test_conformance_suite.py  test_daemon_mode.py  test_departments.py  test_deploy.py  test_docs_parity.py  test_factory_simulated_flow.py  test_filesystem.py  test_filesystem_hardening.py  test_incidents.py  test_journal.py  test_learning.py  test_logging_utils.py  test_orchestrator_execution_mode.py  test_orchestrator_integration.py  test_orchestrator_replay.py  test_patching_gitops.py  test_pipeline_schema.py  test_platforms.py  test_plugins.py  test_portfolio_registry.py  test_preauth_policy_audit.py  test_progress.py  test_quality.py  (+13 more)
(+181 files in other folders)
